--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>Online Doctor's Advice</title>
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <script src="/static/script.js"></script>
 </head>
 <body>
-    <h1>Doctor's Advice Form</h1>
+    <h2>Enrer details of you for  Advice</h2>
     <form method="POST" action="/submit">
         Name: <input type="text" name="name" required><br><br>
         Age: <input type="number" name="age" required><br><br>
