--- a/templates/result.html
+++ b/templates/result.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>Advice Result</title>
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <script src="/static/script.js"></script>
 </head>
 <body>
-    <h1>Hello, {{ name }}</h1>
+    <h3>Hello, {{ name }}</h3>
     <p><strong>Age:</strong> {{ age }}</p>
     <p><strong>Symptoms:</strong> {{ symptoms }}</p>
     <h2>Advice:</h2>
