--- a/templates/add_patient.html
+++ b/templates/add_patient.html
@@ -10,18 +10,13 @@
 
   <div class="container">
     <form method="POST">
-      <label>Name:</label>
-      <input type="text" name="name" required>
-
-      <label>Age:</label>
-      <input type="number" name="age" required>
-
-      <label>Diagnosis:</label>
-      <input type="text" name="diagnosis" required>
-
-      <input type="submit" value="Add Patient">
-    </form>
-
+    <input type="text" name="name" placeholder="Patient Name" required><br>
+    <input type="number" name="age" placeholder="Age"><br>
+    <input type="text" name="gender" placeholder="Gender"><br>
+    <textarea name="symptoms" placeholder="Symptoms"></textarea><br>
+    <textarea name="diagnosis" placeholder="Diagnosis"></textarea><br>
+    <button type="submit">Add Patient</button>
+</form>
     <a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
   </div>
 </body>
